# my-check-app

./: LICENSE  README.md  package.json  test.ps1  vite.config.js
docs/: supabase-setup.md
src/: app.html
src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs
src/lib/: constants.ts  supabase.ts  types.ts
src/lib/components/: AuthOffcanvas.svelte
src/lib/stores/: auth.ts  checks.ts  constants.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/auth/callback/: +page.ts
src/routes/auth/login/: +page.svelte
src/routes/week/: +page.svelte
