[package]
name = "my-check-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_check_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postgrest = "1.0"          # Supabase公式コミュニティのPostgRESTクライアント
dotenvy = "0.15"           # 環境変数ファイル読み込み用
jsonwebtoken = "9"         # JWT検証用
uuid = { version = "1", features = ["serde", "v4"] }  # UUID型用
chrono = "0.4"             # 時刻処理用
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }  # HTTP クライアント（JWKS取得）
tokio = { version = "1", features = ["full"] }  # 非同期ランタイム
